--- a/about.qmd
+++ b/about.qmd
@@ -6,7 +6,7 @@ about:
   links:
     - icon: github
       text: Github
-      href: https://github.com/chipmunk-pixel/
+      href: https://github.com/8bit-pixies/
 
 ---
 
