--- a/posts/gentle-boost/index.qmd
+++ b/posts/gentle-boost/index.qmd
@@ -33,3 +33,5 @@ np.mean([model.predict(X) for model in models])
  This works in the gentle boosting framework by using newton steps to update the weights of the model. By having fixed step sizes for updating the weights it ensures that the weights are bounded and outliers won't over-weigh the model. The original formulation uses scaling in the form of `alpha = exp(1)`, based on the expoential objective function. In the above formation the scaling is a parameter of the model. This can be interpretted as a modified objective variation to gentle boost instead.
  
  I think this variation is very simple to understand and implement whilst still being somewhat more effective than not using boosting at all. 
+
+ For more information please see an [implementation of Gentleboost](https://github.com/8bit-pixies/online-gentleboost/) and the corresponding [writeup](https://arxiv.org/pdf/1905.07697.pdf).
